--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "uuid": "^11.0.5"
   },
   "devDependencies": {
+    "@types/node": "22.13.1",
+    "@types/react": "19.0.8",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+    "typescript": "5.7.3"
   }
 }
