--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "@tailwindcss/postcss": "^4.0.3",
     "next": "15.1.6",
     "react": "19.0.0",
@@ -17,11 +19,8 @@
     "uuid": "^11.0.5"
   },
   "devDependencies": {
-    "@types/node": "22.13.1",
-    "@types/react": "19.0.8",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.0",
-    "typescript": "5.7.3"
+    "tailwindcss": "^4.0.0"
   }
 }
