--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
     "@tailwindcss/postcss": "^4.0.3",
+    "@upstash/redis": "^1.34.3",
+    "axios": "^1.7.9",
+    "google-auth-library": "^9.15.1",
+    "google-spreadsheet": "^4.1.4",
+    "googleapis": "^144.0.0",
     "next": "15.1.6",
+    "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "22.13.1",
