--- a/.github/workflows/scheduled-update.yml
+++ b/.github/workflows/scheduled-update.yml
@@ -3,7 +3,9 @@ name: Update Google Sheets
 on:
   schedule:
     - cron: "*/10 * * * *"  # Runs every 10 minutes
-
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  
 jobs:
   update:
     runs-on: ubuntu-latest
